--- a/Monticello__Project__2/assets/css/stylesheets/_footer.scss
+++ b/Monticello__Project__2/assets/css/stylesheets/_footer.scss
@@ -12,15 +12,19 @@
 	&__basement-img {
 		width: auto;
 		height: 100%;
-		object-fit: cover;
-		object-position: center bottom;
+		-o-object-fit: cover;
+		   object-fit: cover;
+		-o-object-position: center bottom;
+		   object-position: center bottom;
 	}
 
 	&__content {
 		position: absolute;
 		bottom: 23.4rem;
 		right: 50%;
-		transform: translateX(50%);
+		-webkit-transform: translateX(50%);
+		    -ms-transform: translateX(50%);
+		        transform: translateX(50%);
 		max-width: 77rem;
 		width: 100%;
 
@@ -42,35 +46,61 @@
 
 	&__location-wrapper {
 		margin-top: 4.2rem;
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
 		gap: dinamic(54px);
 
 		@media screen and (max-width: 900px) {
-			flex-direction: column-reverse;
-			align-items: center;
+			-webkit-box-orient: vertical;
+			-webkit-box-direction: reverse;
+			    -ms-flex-direction: column-reverse;
+			        flex-direction: column-reverse;
+			-webkit-box-align: center;
+			    -ms-flex-align: center;
+			        align-items: center;
 		}
 	}
 
 	&__contacts {
-		flex-grow: 2;
+		-webkit-box-flex: 2;
+		    -ms-flex-positive: 2;
+		        flex-grow: 2;
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		flex-direction: column;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
 		gap: 2.8rem;
 
 		@media screen and (max-width: 900px) {
-			flex-direction: row;
-			flex-wrap: wrap;
-			justify-content: center;
+			-webkit-box-orient: horizontal;
+			-webkit-box-direction: normal;
+			    -ms-flex-direction: row;
+			        flex-direction: row;
+			-ms-flex-wrap: wrap;
+			    flex-wrap: wrap;
+			-webkit-box-pack: center;
+			    -ms-flex-pack: center;
+			        justify-content: center;
 		}
 
 		@media screen and (max-width: 900px) {
-			justify-content: flex-start;
+			-webkit-box-pack: start;
+			    -ms-flex-pack: start;
+			        justify-content: flex-start;
 		}
 	}
 
 	&__contact-item {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		align-items: center;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
 		max-width: 100%;
 	}
 
@@ -97,14 +127,19 @@
 		color: $black;
 
 		@media screen and (max-width: 600px) {
+			display: -webkit-inline-box;
+			display: -ms-inline-flexbox;
 			display: inline-flex;
 			word-wrap: unset;
-			flex-wrap: wrap;
+			-ms-flex-wrap: wrap;
+			    flex-wrap: wrap;
 		}
 	}
 
 	&__form-wrapper {
-		flex-grow: 1;
+		-webkit-box-flex: 1;
+		    -ms-flex-positive: 1;
+		        flex-grow: 1;
 
 		@media screen and (max-width: 900px) {
 			width: 100%;
@@ -113,13 +148,22 @@
 
 	&__form {
 		width: 100%;
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		flex-direction: column;
-		align-items: flex-end;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		-webkit-box-align: end;
+		    -ms-flex-align: end;
+		        align-items: flex-end;
 		gap: 3rem;
 
 		@media screen and (max-width: 900px) {
-			align-items: center;
+			-webkit-box-align: center;
+			    -ms-flex-align: center;
+			        align-items: center;
 		}
 	}
 
@@ -131,6 +175,38 @@
 		border: none;
 		border-bottom: 1px solid rgba(44, 64, 88, 0.2);
 
+		&::-webkit-input-placeholder {
+			@include montserrat--400;
+			@include fs18--lh27;
+			color: $black;
+			padding-bottom: 1.4rem;
+			opacity: 0.5;
+		}
+
+		&::-moz-placeholder {
+			@include montserrat--400;
+			@include fs18--lh27;
+			color: $black;
+			padding-bottom: 1.4rem;
+			opacity: 0.5;
+		}
+
+		&:-ms-input-placeholder {
+			@include montserrat--400;
+			@include fs18--lh27;
+			color: $black;
+			padding-bottom: 1.4rem;
+			opacity: 0.5;
+		}
+
+		&::-ms-input-placeholder {
+			@include montserrat--400;
+			@include fs18--lh27;
+			color: $black;
+			padding-bottom: 1.4rem;
+			opacity: 0.5;
+		}
+
 		&::placeholder {
 			@include montserrat--400;
 			@include fs18--lh27;
@@ -138,6 +214,10 @@
 			padding-bottom: 1.4rem;
 			opacity: 0.5;
 		}
+
+		-webkit-transition: all 0.3s ease-in-out;
+
+		-o-transition: all 0.3s ease-in-out;
 
 		transition: all 0.3s ease-in-out;
 
@@ -162,13 +242,20 @@
 		color: $darkBlue;
 		background-color: $white;
 		padding: 1.1rem 3.4rem 1.2rem;
+		width: -webkit-max-content;
+		width: -moz-max-content;
 		width: max-content;
+
+		-webkit-transition: all 0.3s linear;
+
+		-o-transition: all 0.3s linear;
 
 		transition: all 0.3s linear;
 
 		&:hover,
 		&:focus {
-			animation: colorHoverBtn 2s linear infinite;
+			-webkit-animation: colorHoverBtn 2s linear infinite;
+			        animation: colorHoverBtn 2s linear infinite;
 		}
 
 		&:active {
@@ -181,13 +268,22 @@
 	}
 
 	&__links-wrapper {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		justify-content: space-between;
+		-webkit-box-pack: justify;
+		    -ms-flex-pack: justify;
+		        justify-content: space-between;
 		width: 100%;
 
 		@media screen and (max-width: 600px) {
-			flex-direction: column;
-			align-items: center;
+			-webkit-box-orient: vertical;
+			-webkit-box-direction: normal;
+			    -ms-flex-direction: column;
+			        flex-direction: column;
+			-webkit-box-align: center;
+			    -ms-flex-align: center;
+			        align-items: center;
 			gap: 2rem;
 		}
 	}
@@ -204,13 +300,21 @@
 	& .social {
 		@include flexAllCenter;
 		&__wrapper {
+			display: -webkit-box;
+			display: -ms-flexbox;
 			display: flex;
-			align-items: center;
-			justify-content: end;
+			-webkit-box-align: center;
+			    -ms-flex-align: center;
+			        align-items: center;
+			-webkit-box-pack: end;
+			    -ms-flex-pack: end;
+			        justify-content: end;
 			gap: 2rem;
 		}
 
 		&__link {
+			display: -webkit-box;
+			display: -ms-flexbox;
 			display: flex;
 			width: 4rem;
 			height: 4rem;
