--- a/Monticello__Project__2/assets/css/stylesheets/_navigation.scss
+++ b/Monticello__Project__2/assets/css/stylesheets/_navigation.scss
@@ -2,14 +2,20 @@
 	@include flexAllCenter;
 
 	@media screen and (max-width: 1300px) {
-		grid-row-start: 2;
+		-ms-grid-row: 2;
+		    grid-row-start: 2;
+		-ms-grid-column-span: 2;
 		grid-column: span 2;
 	}
 
 	@media screen and (max-width: 600px) {
-		grid-row-start: 2;
-		grid-column-start: 2;
-		justify-content: flex-end;
+		-ms-grid-row: 2;
+		    grid-row-start: 2;
+		-ms-grid-column: 2;
+		    grid-column-start: 2;
+		-webkit-box-pack: end;
+		    -ms-flex-pack: end;
+		        justify-content: flex-end;
 		position: relative;
 	}
 
@@ -17,6 +23,8 @@
 		@include burger;
 
 		@media screen and (max-width: 600px) {
+			display: -webkit-inline-box;
+			display: -ms-inline-flexbox;
 			display: inline-flex;
 			position: absolute;
 			top: 0;
@@ -26,11 +34,15 @@
 
 		&--activ {
 			&::before {
-				transform: rotateZ(45deg);
+				-webkit-transform: rotateZ(45deg);
+				    -ms-transform: rotate(45deg);
+				        transform: rotateZ(45deg);
 			}
 
 			&::after {
-				transform: rotateZ(-45deg);
+				-webkit-transform: rotateZ(-45deg);
+				    -ms-transform: rotate(-45deg);
+				        transform: rotateZ(-45deg);
 			}
 		}
 	}
@@ -44,6 +56,10 @@
 	&__item {
 		@include flexAllCenter;
 
+		-webkit-transition: all 0.3s linear;
+
+		-o-transition: all 0.3s linear;
+
 		transition: all 0.3s linear;
 
 		&::before {
@@ -56,6 +72,10 @@
 			border: 1px solid $white;
 
 			margin-right: 1.4rem;
+
+			-webkit-transition: all 0.3s linear;
+
+			-o-transition: all 0.3s linear;
 
 			transition: all 0.3s linear;
 		}
@@ -91,19 +111,27 @@
 }
 
 .about--activ {
-	transform: translateX(-70%);
+	-webkit-transform: translateX(-70%);
+	    -ms-transform: translateX(-70%);
+	        transform: translateX(-70%);
 	scale: 1;
 }
 .projects--activ {
-	transform: translateX(-60%) translateY(140%);
+	-webkit-transform: translateX(-60%) translateY(140%);
+	    -ms-transform: translateX(-60%) translateY(140%);
+	        transform: translateX(-60%) translateY(140%);
 	scale: 1;
 }
 .news--activ {
-	transform: translateX(-113%) translateY(280%);
+	-webkit-transform: translateX(-113%) translateY(280%);
+	    -ms-transform: translateX(-113%) translateY(280%);
+	        transform: translateX(-113%) translateY(280%);
 	scale: 1;
 }
 .contact--activ {
-	transform: translateX(-40%) translateY(420%);
+	-webkit-transform: translateX(-40%) translateY(420%);
+	    -ms-transform: translateX(-40%) translateY(420%);
+	        transform: translateX(-40%) translateY(420%);
 	scale: 1;
 }
 
@@ -115,9 +143,15 @@
 	}
 
 	&__wrapper {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		align-items: center;
-		justify-content: end;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
+		-webkit-box-pack: end;
+		    -ms-flex-pack: end;
+		        justify-content: end;
 		gap: dinamic(20px);
 	}
 
@@ -125,6 +159,8 @@
 		@include burger;
 
 		@media screen and (max-width: 400px) {
+			display: -webkit-inline-box;
+			display: -ms-inline-flexbox;
 			display: inline-flex;
 			position: absolute;
 			top: 0;
@@ -134,28 +170,42 @@
 
 		&--activ {
 			&::before {
-				transform: rotateZ(45deg);
+				-webkit-transform: rotateZ(45deg);
+				    -ms-transform: rotate(45deg);
+				        transform: rotateZ(45deg);
 			}
 
 			&::after {
-				transform: rotateZ(-45deg);
+				-webkit-transform: rotateZ(-45deg);
+				    -ms-transform: rotate(-45deg);
+				        transform: rotateZ(-45deg);
 			}
 		}
 	}
 
 	@media screen and (max-width: 600px) {
-		grid-row-start: 2;
-		grid-column-start: 1;
-		justify-content: start;
+		-ms-grid-row: 2;
+		    grid-row-start: 2;
+		-ms-grid-column: 1;
+		    grid-column-start: 1;
+		-webkit-box-pack: start;
+		    -ms-flex-pack: start;
+		        justify-content: start;
 	}
 
 	&__link {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
 		width: 4rem;
 		height: 4rem;
 		padding: 1.1rem 0;
 		border-radius: 50%;
 		border: 1px solid rgba(255, 255, 255, 0.4);
+
+		-webkit-transition: all 0.3s linear;
+
+		-o-transition: all 0.3s linear;
 
 		transition: all 0.3s linear;
 
@@ -174,6 +224,8 @@
 	}
 
 	&__icon {
+		-webkit-transition: all 0.3s linear;
+		-o-transition: all 0.3s linear;
 		transition: all 0.3s linear;
 		fill: $white;
 	}
@@ -183,11 +235,13 @@
 	&:hover,
 	&:focus {
 		border-color: $facebook;
-		box-shadow: 0 0 15px $white;
+		-webkit-box-shadow: 0 0 15px $white;
+		        box-shadow: 0 0 15px $white;
 	}
 
 	&:active {
-		box-shadow: 0 0 15px $facebook;
+		-webkit-box-shadow: 0 0 15px $facebook;
+		        box-shadow: 0 0 15px $facebook;
 
 		& .social__icon {
 			fill: $facebook;
@@ -195,7 +249,9 @@
 	}
 
 	&--activ {
-		transform: translateX(150%);
+		-webkit-transform: translateX(150%);
+		    -ms-transform: translateX(150%);
+		        transform: translateX(150%);
 		scale: 1;
 	}
 }
@@ -204,11 +260,13 @@
 	&:hover,
 	&:focus {
 		border-color: $twitter;
-		box-shadow: 0 0 15px $white;
+		-webkit-box-shadow: 0 0 15px $white;
+		        box-shadow: 0 0 15px $white;
 	}
 
 	&:active {
-		box-shadow: 0 0 15px $twitter;
+		-webkit-box-shadow: 0 0 15px $twitter;
+		        box-shadow: 0 0 15px $twitter;
 
 		& .social__icon {
 			fill: $twitter;
@@ -216,7 +274,9 @@
 	}
 
 	&--activ {
-		transform: translateY(120%) translateX(120%);
+		-webkit-transform: translateY(120%) translateX(120%);
+		    -ms-transform: translateY(120%) translateX(120%);
+		        transform: translateY(120%) translateX(120%);
 		scale: 1;
 	}
 }
@@ -225,11 +285,13 @@
 	&:hover,
 	&:focus {
 		border-color: $instagram;
-		box-shadow: 0 0 15px $white;
+		-webkit-box-shadow: 0 0 15px $white;
+		        box-shadow: 0 0 15px $white;
 	}
 
 	&:active {
-		box-shadow: 0 0 15px $instagram;
+		-webkit-box-shadow: 0 0 15px $instagram;
+		        box-shadow: 0 0 15px $instagram;
 
 		& .social__icon {
 			fill: $instagram;
@@ -237,7 +299,9 @@
 	}
 
 	&--activ {
-		transform: translateY(150%);
+		-webkit-transform: translateY(150%);
+		    -ms-transform: translateY(150%);
+		        transform: translateY(150%);
 		scale: 1;
 	}
 }
