--- a/Monticello__Project__2/assets/css/stylesheets/_what-we-do.scss
+++ b/Monticello__Project__2/assets/css/stylesheets/_what-we-do.scss
@@ -5,7 +5,12 @@
 	}
 
 	&__wrapper {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-ms-flex-direction: column;
 		flex-direction: column;
 	}
 
@@ -15,7 +20,12 @@
 	}
 
 	&__content {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-ms-flex-direction: column;
 		flex-direction: column;
 		gap: dinamic(177px);
 
@@ -29,27 +39,43 @@
 }
 
 .item {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	gap: dinamic(64px);
 
 	&--reverse {
+		-webkit-box-orient: horizontal;
+		-webkit-box-direction: reverse;
+		-ms-flex-direction: row-reverse;
 		flex-direction: row-reverse;
 	}
 
 	@media screen and (max-width: $tablet) {
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-ms-flex-direction: column;
 		flex-direction: column;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
 		align-items: center;
 	}
 
 	&__picture-wrapper {
 		@include flexAllCenter;
+		-webkit-box-shadow: dinamic(-215px) dinamic(-57px) 0 $lightBlue;
 		box-shadow: dinamic(-215px) dinamic(-57px) 0 $lightBlue;
+		height: -webkit-fit-content;
+		height: -moz-fit-content;
 		height: fit-content;
 		width: dinamic(630px);
 		max-width: 63rem;
+		-webkit-box-flex: 2;
+		-ms-flex-positive: 2;
 		flex-grow: 2;
 
 		&--reverse {
+			-webkit-box-shadow: dinamic(215px) dinamic(-57px) 0 $middleBlue;
 			box-shadow: dinamic(215px) dinamic(-57px) 0 $middleBlue;
 		}
 
