--- a/OnWave/assets/css/style.css
+++ b/OnWave/assets/css/style.css
@@ -1046,4 +1046,8 @@ html {
   left: 0;
   right: 0;
   background-color: #f8f1ea;
+}
+
+.main-slider {
+  width: 100%;
 }/*# sourceMappingURL=style.css.map */
